nav moved right, collapse error resolved via media query

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,3 +19,10 @@
 a {
   font-family: "Bebas Neue", cursive;
 }
+
+@media only screen and (min-width: 992px) {
+  .navbar-collapse {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+}
